# HarvestIQ

./: LICENSE
Ingestion service/: .env.example  .gitignore  README.md  notes.txt  pyproject.toml
Ingestion service/configs/: aoi.geojson  ingestion.yaml
Ingestion service/harvestiq_ingestion_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Ingestion service/ingestion/: __init__.py  ingest.py
Ingestion service/ingestion/clients/: __init__.py  satellite_data_client.py  stac_api.py
Ingestion service/ingestion/models/: __init__.py  entities.py
Ingestion service/ingestion/providers/: __init__.py  base.py  landsat8.py  landsat9.py  registry.py  sentinel1.py  sentinel2.py  stac_base.py
Ingestion service/ingestion/storage/: __init__.py  local.py
Ingestion service/ingestion/utils/: __init__.py  aoi.py  common.py  raster.py
MVP_page/: .gitignore  README.md  package-lock.json
MVP_page/app/: globals.css  layout.tsx  page.tsx  providers.tsx
MVP_page/app/about/: page.tsx
MVP_page/app/contact/: page.tsx
MVP_page/app/pricing/: page.tsx
MVP_page/components/: about-page-content.tsx  alerts-section.tsx  contact-page-content.tsx  dashboard-preview.tsx  data-input-section.tsx  farm-map-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works-section.tsx  language-switcher.tsx  pricing-page-content.tsx  subpage-header.tsx  theme-toggle.tsx  waitlist-section.tsx
MVP_page/lib/: language-context.tsx  translations.ts
ml/: .gitignore  main.py  pyproject.toml
ml/cli/: __init__.py  clean.py  download_test_data.py  from_pretrained.py  run.py  visualize.py
ml/infrastructure/: DataEngine.py  __init__.py  data_engine.py  env_config.py  logger.py  model_executor.py  model_loader.py
ml/infrastructure/local/: __init__.py  local_config.py  mode.py
ml/models/: ModelBase.py  ModelLineage.py  YieldPredictionLinReg.py  YieldPredictionRandomForest.py  YieldPredictionSVR.py  YieldPredictionXGBoost.py  __init__.py  model_base.py  model_lineage.py  train_me.py  yield_preprocessing.py
ml/models/test/: ImageSearch.py  RegressionModel.py
ml/tests/: conftest.py  test_cli_from_pretrained.py  test_cli_visualize.py  test_main_args.py  test_model_executor.py  test_model_lineage.py  test_model_loader.py  test_regression_pipeline.py
ml/utilities/: __init__.py  path_resolver.py
mlserver/: .gitignore  README.md  pyproject.toml
mlserver/app/: __init__.py  aoi.py  main.py  model.py
